--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script type="text/javascript">
+			function log(){
+				if(console)
+					console.log(log.arguments);
+
+			}
+		</script>
 		<title>Elemental Controller</title>
 	    <script src="js/Box2dWeb-2.1.a.3.min.js"></script>
 		<script src="js/crafty.js"></script>
