--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Elemental Controller</title>
-		<script src="http://craftyjs.com/release/0.4.4/crafty.js"></script>
-		<script src="js/elemental-controller.js"></script>
-		<style type="text/css">
-			body
-			{
-				margin: 0;
-				padding: 0;
-			}
-			#cr-stage
-			{
-				margin: 10px auto;
-				border: 1px solid black;
-			}
+<!DOCTYPE HTML>
+	<head>	
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+		<!--<script type="text/javascript" src="http://craftyjs.com/release/0.4.4/crafty-min.js"></script>-->
+		<script type="text/javascript" src="http://s3.amazonaws.com/craftyjs/crafty-SNAPSHOT.js"></script>
+		<script type="text/javascript" src="js/box2dweb.js"></script> 
+		<script type="text/javascript" src="js/b2entity.js"></script> 
+		<script type="text/javascript" src="js/elemental-controller.js"></script> 
+		<title>Test</title> 
+		<style> 
+		body, html
+		{
+			margin:0;
+			padding: 0;
+		}
+		#cr-stage
+		{ 
+			border: 1px solid black;
+			float: left;
+		}
+		#canvas
+		{
+			border: 1px solid black;
+			float: left;
+		}
 		</style>
-	</head>
-	<body>
-		
-	</body>
+		<script type="text/javascript">
+			function msg(){
+				var r = "Console: ";
+				for(i in msg.arguments){
+					r+= msg.arguments[i] + " ";
+				}
+				$("#console")[0].innerHTML = r;
+			}
+		</script>
+	</head> 
+	<body> 
+		<div id="console" style="position:absolute">Console:</div>
+		<div id="cr-stage" style="float:left;"></div>
+		<canvas id="canvas"></canvas>
+	</body> 
 </html>
