--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 	<head>	
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 		<!--<script type="text/javascript" src="http://craftyjs.com/release/0.4.4/crafty-min.js"></script>-->
-		<script type="text/javascript" src="http://s3.amazonaws.com/craftyjs/crafty-SNAPSHOT.js"></script>
+		<script type="text/javascript" src="https://s3.amazonaws.com/craftyjs/crafty-SNAPSHOT.js"></script>
 		<script type="text/javascript" src="js/box2dweb.js"></script> 
-		<script type="text/javascript" src="js/b2entity.js"></script> 
+		<script type="text/javascript" src="js/box2dComponents.js"></script> 
 		<script type="text/javascript" src="js/elemental-controller.js"></script> 
 		<title>Test</title> 
 		<style> 
@@ -37,6 +37,6 @@
 	<body> 
 		<div id="console" style="position:absolute">Console:</div>
 		<div id="cr-stage" style="float:left;"></div>
-		<canvas id="canvas"></canvas>
+		<canvas id="canvas" style="position:absolute;top:0;left:0;z-index:-99;"></canvas>
 	</body> 
 </html>
