new components for basic gameplay

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<script type="text/javascript" src="https://s3.amazonaws.com/craftyjs/crafty-SNAPSHOT.js"></script>
 		<script type="text/javascript" src="js/box2dweb.js"></script> 
 		<script type="text/javascript" src="js/box2dComponents.js"></script> 
-		<script type="text/javascript" src="js/elemental-controller.js"></script> 
+		<script type="text/javascript" src="js/elemental-controller2.js"></script> 
 		<title>Test</title> 
 		<style> 
 		body, html
@@ -35,7 +35,7 @@
 		</script>
 	</head> 
 	<body> 
-		<div id="console" style="position:absolute">Console:</div>
+		<div id="console" style="position:absolute;z-index:999">Console:</div>
 		<div id="cr-stage" style="float:left;"></div>
 		<canvas id="canvas" style="position:absolute;top:0;left:0;z-index:-99;"></canvas>
 	</body> 
