Added basic character and movement components

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</script>
 	</head> 
 	<body> 
-		<div id="console" style="position:absolute;z-index:999">Console:</div>
+		<div id="console" style="position:absolute;z-index:999;font-weight:bold;font-size:18px;color:#fff;">Console:</div>
 		<div id="cr-stage" style="float:left;"></div>
 		<canvas id="canvas" style="position:absolute;top:0;left:0;z-index:99;"></canvas>
 	</body> 
