Mouse down changes to avoid clicks outside of the canvas from working

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
 		<div id="console" style="position:absolute;z-index:999;font-weight:bold;font-size:18px;color:#fff;">Console:</div>
 		<div id="cr-stage" style="float:left;"></div>
 		<canvas id="canvas" style="position:absolute;top:0;left:0;z-index:99;"></canvas>
+		<p style="position:absolute;top:600px;"><input type="button" value="Debug (on/off)" onclick="switchDebug()"></p>
 	</body> 
 </html>
